--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" role="language">
+<head role="banner">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
@@ -17,9 +17,9 @@
 
 </head>
 
-<body>
+<body role="main">
 
-  <div class="wrapper">
+  <div class="wrapper" role="article">
     <div class="card">
       <img src="images/image-qr-code.png" alt="qr-code">
       <h1 class="title">Improve your front-end skills by building projects</h1>
@@ -28,7 +28,7 @@
   </div>
 
   
-  <div class="attribution">
+  <div class="attribution" role="doc-acknowledgments">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://thepinkgargoyle.com/">Adriana Pe&ntilde;a</a>.
   </div>
