--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="language">
+<html lang="en" role="columnheader">
 <head role="banner">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -19,7 +19,7 @@
 
 <body role="main">
 
-  <div class="wrapper" role="article">
+  <div class="wrapper" role="application">
     <div class="card">
       <img src="images/image-qr-code.png" alt="qr-code">
       <h1 class="title">Improve your front-end skills by building projects</h1>
@@ -28,7 +28,7 @@
   </div>
 
   
-  <div class="attribution" role="doc-acknowledgments">
+  <div class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://thepinkgargoyle.com/">Adriana Pe&ntilde;a</a>.
   </div>
