--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="document">
+<html lang="en" role="banner">
 <head role="banner">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -17,7 +17,7 @@
 
 </head>
 
-<body role="columnheader">
+<body role="main">
 
   <div class="wrapper" role="application">
     <div class="card">
@@ -28,7 +28,7 @@
   </div>
 
   
-  <div class="attribution" role="doc-acknowledgments">
+  <div class="attribution" role="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://thepinkgargoyle.com/">Adriana Pe&ntilde;a</a>.
   </div>
